--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "pdfmake": "^0.1.71",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.13.1",
+    "react-model": "^4.0.0",
     "react-scripts": "4.0.3",
     "react-table": "^7.6.3",
     "styled-components": "^5.2.3",
