--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.29.1",
     "pdfmake": "^0.1.71",
     "react": "^17.0.2",
+    "react-date-picker": "^8.1.1",
     "react-dom": "^17.0.2",
     "react-modal": "^3.13.1",
     "react-model": "^4.0.0",
