--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-model": "^4.0.0",
     "react-scripts": "4.0.3",
     "react-table": "^7.6.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "styled-components": "^5.2.3",
     "web-vitals": "^1.0.1"
   },
