--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-modal": "^3.13.1",
     "react-model": "^4.0.0",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "react-table": "^7.6.3",
     "semantic-ui-css": "^2.4.1",
